syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/rruzicic/globetrotter/bnb/accommodation-service/pb";

message User {
    string id = 1;
    google.protobuf.Timestamp created_on = 2;
    google.protobuf.Timestamp modified_on = 3;
    google.protobuf.Timestamp deleted_on = 4;

    string firstName = 5;
    string lastName = 6;
    string email = 7;
    string password = 8;
    string role = 9;

    string country = 10;
    string street = 11;
    string streetNum = 12;
    int32 zipCode = 13;
}

message UserResponse { User user = 1; }
message UserRequestId { string id = 1; }

service UserService {
    rpc GetUserById(UserRequestId) returns (UserResponse) {}
}